// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button view renders a default Button with content correctly 1`] = `
<button
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #f3f2f1;
        border-color: #8a8886;
        border-radius: 0px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #323130;
        cursor: default;
        display: inline-block;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:hover {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      &:hover:active {
        background-color: #edebe9;
        border-color: #8a8886;
        color: #201f1e;
      }
      &:hover .ms-Icon-47 {
        color: #201f1e;
      }
      &:hover:active .ms-Icon-47 {
        color: #201f1e;
      }
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=
        ms-Stack
        {
          align-items: center;
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: center;
          padding-bottom: 8px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 8px;
          width: auto;
        }
        & > * {
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-left: 8px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <span
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: inherit;
            display: inline;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            moz-osx-font-smoothing: grayscale;
            overflow: visible;
            webkit-font-smoothing: antialiased;
          }
    >
      Default button
    </span>
  </span>
</button>
`;

exports[`Button view renders a disabled primary Button with content correctly 1`] = `
<button
  aria-disabled={true}
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        border-radius: 0px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #a19f9d;
        cursor: default;
        display: inline-block;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:hover {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      &:hover:active {
        background-color: #f3f2f1;
        border-color: #f3f2f1;
        color: #a19f9d;
      }
      &:hover .ms-Icon-57 {
        color: #a19f9d;
      }
      &:hover:active .ms-Icon-57 {
        color: #a19f9d;
      }
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=
        ms-Stack
        {
          align-items: center;
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: center;
          padding-bottom: 8px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 8px;
          width: auto;
        }
        & > * {
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-left: 8px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <span
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: inherit;
            display: inline;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            moz-osx-font-smoothing: grayscale;
            overflow: visible;
            webkit-font-smoothing: antialiased;
          }
    >
      Disabled primary button
    </span>
  </span>
</button>
`;

exports[`Button view renders a primary Button with content correctly 1`] = `
<button
  className=

      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        background-color: #0078d4;
        border-color: transparent;
        border-radius: 0px;
        border-style: solid;
        border-width: 0px;
        box-sizing: border-box;
        color: #ffffff;
        cursor: default;
        display: inline-block;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        justify-content: center;
        margin-bottom: 0px;
        margin-left: 0px;
        margin-right: 0px;
        margin-top: 0px;
        min-height: 32px;
        min-width: 100px;
        outline: transparent;
        overflow: hidden;
        padding-bottom: 0px;
        padding-left: 0px;
        padding-right: 0px;
        padding-top: 0px;
        position: relative;
        text-align: center;
        text-decoration: none;
        user-select: none;
        vertical-align: baseline;
      }
      &::-moz-focus-inner {
        border: 0;
      }
      .ms-Fabric--isFocusVisible &:focus:after {
        border: 1px solid #ffffff;
        bottom: 1px;
        content: "";
        left: 1px;
        outline: 1px solid #605e5c;
        position: absolute;
        right: 1px;
        top: 1px;
        z-index: 1;
      }
      &:hover {
        background-color: #106ebe;
        border-color: #8a8886;
        color: #ffffff;
      }
      &:hover:active {
        background-color: #005a9e;
        border-color: #8a8886;
        color: #ffffff;
      }
      &:hover .ms-Icon-55 {
        color: #ffffff;
      }
      &:hover:active .ms-Icon-55 {
        color: #ffffff;
      }
  onClick={[Function]}
  role="button"
  type="button"
>
  <span
    className=
        ms-Stack
        {
          align-items: center;
          box-sizing: border-box;
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          height: 100%;
          justify-content: center;
          padding-bottom: 8px;
          padding-left: 16px;
          padding-right: 16px;
          padding-top: 8px;
          width: auto;
        }
        & > * {
          text-overflow: ellipsis;
        }
        & > *:not(:first-child) {
          margin-left: 8px;
        }
        & > *:not(.ms-StackItem) {
          flex-shrink: 1;
        }
  >
    <span
      className=

          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            color: inherit;
            display: inline;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            moz-osx-font-smoothing: grayscale;
            overflow: visible;
            webkit-font-smoothing: antialiased;
          }
    >
      Primary button
    </span>
  </span>
</button>
`;
